fix: long strings are hidden behind button

--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -2,6 +2,8 @@
   border: 2px solid black;
 
   padding: 16px;
+  padding-right: 40px;
+
   border-radius: 12px;
 
   display: block;
